# ai-assistant

./: .flake8  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  OAUTH_SETUP.md  USER_MANAGEMENT.md  package-lock.json  pyproject.toml  readme.md
.github/: copilot-instructions.md
.github/prompts/: ui-design.prompt.md
assistant-srv/: .env.dev  .env.example  api_docs.json  decorator_rename_summary.md  demo_oauth.py  logging.dev.yaml  readme.md  run_server.py  test_complete_security.py  test_oauth_permissions.py
assistant-srv/data/: oauth_states.json  sessions.json  users.json
assistant-srv/docs/: OAUTH_PRODUCTION.md  generate_api_docs.py
assistant-srv/src/assistant/: __init__.py  main.py
assistant-srv/src/assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assistant-srv/src/assistant/api/: __init__.py  auth.py  models.py  oauth.py  oauth_clean.py  sessions.py  users.py
assistant-srv/src/assistant/core/: __init__.py  config.py  dependencies.py  env.py  exceptions.py
assistant-srv/src/assistant/llm/: chat_agent.py  chat_model_factory.py  message.py
assistant-srv/src/assistant/llm/tools/: __init__.py  base.py  (+9 more)
assistant-srv/src/assistant/models/: __init__.py  llm.py  model.py  session.py  user.py
assistant-srv/src/assistant/repositories/: __init__.py  base.py  json_model_repository.py  json_session_repository.py  json_user_repository.py  model_repository.py  session_repository.py  user_repository.py
assistant-srv/src/assistant/services/: __init__.py  model_service.py  oauth_providers.py  oauth_service.py  oauth_state_manager.py  session_service.py  user_service.py
assistant-srv/src/assistant/utils/: __init__.py  auth.py  db_init.py  permissions.py  security.py
assistant-srv/tests/: conftest.py  test_auth_api.py  test_complete_security.py  test_decorators.py  test_jwt_comparison.py  test_jwt_config.py  test_login_session.py  test_oauth_integration.py  test_oauth_permissions.py  test_password_hashing.py  test_secure_tokens.py  test_security_endpoints.py  test_security_new.py  test_session_architecture.py  test_user_management_integration.py  test_user_permissions.py  test_user_service.py
assistant-srv/tests/api/auth/: test_auth_api.py  test_decorators.py  test_jwt_config.py  test_login_session.py  test_password_hashing.py  test_secure_tokens.py  test_session_architecture.py
assistant-srv/tests/api/user/: test_user_management_integration.py  test_user_service.py
assistant-srv/tests/llm/: test_chat_agent.py  test_chat_model_factory.py
assistant-srv/tests/llm/tools/: test_base.py  test_builtin.py  test_codecs.py  test_data_struct.py  test_datetime.py  test_math.py  test_random.py  test_text.py  test_tool_retriever.py  test_validation.py
assistant-ui/: .env.dev  .env.production  .npmrc  CSS_REFACTOR_TASK_LIST.md  README.md  REFACTOR_PROGRESS.md  TASK_LIST.md  color-consistency-demo.html  index.html  jest.config.cjs  markdown-test.md  mermaid-error-test.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  temp_markdown.tsx  test-login.html  tsconfig.app.json  user-status-bar-test.html  user-status-test.html  vite.config.ts
assistant-ui-backup-20250719-200525/: README.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json
assistant-ui-backup-20250719-200525/src/: App.tsx  index.css
assistant-ui-backup-20250719-200525/src/components/: AssistantAvatar.tsx  ChatInput.tsx  LoadingIndicator.tsx  MarkdownRenderer.tsx  MessageComponent.tsx  Sidebar.tsx
assistant-ui-backup-20250719-200525/src/hooks/: useAuth.ts
assistant-ui-backup-20250719-200525/src/utils/: conversationUtils.ts
assistant-ui/docs/: CSS_ARCHITECTURE_GUIDE.md  MODEL_INTEGRATION.md  STYLE_REFACTOR_GUIDE.md
assistant-ui/scripts/: analyze-styles.sh
assistant-ui/src/: App-backup.tsx  App-new.tsx  App-simple-test.tsx  App.tsx  App_new.tsx  config.ts  index.css  react-jsx.d.ts  setupTests.ts  types.ts
assistant-ui/src/__mocks__/: vite-env.ts
assistant-ui/src/__tests__/: Button.test.tsx  Input.test.tsx  Login.test.tsx  Modal.test.tsx  Tooltip.test.tsx  mockAI.test.ts
assistant-ui/src/api/: auth.ts  models.ts  request.ts
assistant-ui/src/components/: AssistantAvatar.tsx  ChatInput.tsx  CodeBlock.tsx  LoadingIndicator.tsx  MarkdownRenderer.tsx  MarkdownRenderer_backup.tsx  MarkdownRenderer_safe.tsx  MessageComponent.tsx  Sidebar.tsx
assistant-ui/src/components/chat/: ChatArea.tsx  CodeBlock.tsx  FileUpload.tsx  MarkdownRenderer.tsx  MermaidChart.tsx  MessageEditModal.tsx  ModelControl.tsx  ModelInfoModal.tsx  ModelSelector.tsx  ModelSettingsModal.tsx
assistant-ui/src/components/examples/: AuthAPIDemo.tsx  AuthStateDemo.tsx  AuthenticatedComponent.tsx  TokenManagementDemo.tsx
assistant-ui/src/components/layout/: MainLayout.tsx
assistant-ui/src/components/sidebar/: Sidebar.tsx
assistant-ui/src/components/ui/: AppInitializing.tsx  Avatar.tsx  Button.d.ts  Button.tsx  Input.tsx  LoadingButton.tsx  LoadingSpinner.tsx  Modal.tsx  Tooltip.tsx  index.ts
assistant-ui/src/context/: ConversationContext.ts  ConversationContext.tsx  ModelContext.ts  ModelContext.tsx  SidebarContext.ts  SidebarContext.tsx  ThemeContext.ts  ThemeContext.tsx  UserSessionContext.ts  UserSessionContext.tsx
assistant-ui/src/hooks/: useChatInput.ts  useConversation.ts  useConversations.ts  useEditingMessage.ts  useFileUpload.ts  useMessageActions.ts  useModel.ts  useSidebar.ts  useTheme.ts  useUserSession.ts
assistant-ui/src/pages/: ChatPage.tsx  Login.tsx
assistant-ui/src/styles/: ChatArea.css  base.css  fileUpload.css  index.css  layout.css
assistant-ui/src/styles/components/: auth.css  buttons.css  chat.css  common.css  inputs.css  markdown.css  model-selector.css  sidebar.css  tooltips.css
assistant-ui/src/types/: index.ts
assistant-ui/src/utils/: apiHelpers.ts  auth.ts  conversationUtils.ts  fileUtils.ts  mockAI.ts  mockData.ts  styles.ts
data/: oauth_states.json  sessions.json  users.json
doc/design/: general-design.md  thoughts-of-the-system.md  ui-design.md
test_data/sessions.json/: sessions.json
test_data/users.json/: users.json
(+12 files in other folders)
